all done need to test

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -19,7 +19,7 @@
     "API_BASE_URL = \"http://127.0.0.1:8000\"\n",
     "\n",
     "# Step 1: Upload the image\n",
-    "with open(\"/media/maruf/f528ebe5-e2ce-445d-87cb-ce5208a8080d/personal/high_dim_image_processor/data/sample_5d_image.tiff\", \"rb\") as file:\n",
+    "with open(\"data/test.tiff\", \"rb\") as file:\n",
     "    response = requests.post(f\"{API_BASE_URL}/upload\", files={\"file\": file})\n",
     "    image_id = response.json()[\"id\"]\n",
     "    print(\"Image ID:\", image_id)\n",
